--- a/styles/file.sty
+++ b/styles/file.sty
@@ -1,5 +1,11 @@
 \ProvidesPackage{styles/file}
 
+\newcommand{\optionalinput}[1]{%
+    \IfFileExists{#1}{%
+        \input{#1}%
+    }{}%
+}
+
 \newcommand{\IfFileNotEmpty}[2]{%
     \IfFileExists{#1}{%
         \newread\tempfile
