Add missing content page style

--- a/structure/structure.tex
+++ b/structure/structure.tex
@@ -5,6 +5,7 @@
 \input{structure/lists/listings}
 \input{structure/lists/abbreviations}
 
+\thispagestyle{plain}
 \input{structure/content/content}
 \pagebreak
 
